Add user and product docs
